// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Quadrant symbols should render single pixel as top-left quadrant 1`] = `"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▘\x1B[0m"`;

exports[`Quadrant symbols should render full 2x2 block as full character 1`] = `"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m█\x1B[0m"`;

exports[`Quadrant symbols should render diagonal pattern correctly 1`] = `"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▚\x1B[0m"`;

exports[`Quadrant symbols should render horizontal line with quadrant symbols 1`] = `"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▀▀▀▀\x1B[0m"`;

exports[`Quadrant symbols should render vertical line with quadrant symbols 1`] = `
"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▌\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▌\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▌\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▌\x1B[0m"
`;

exports[`Quadrant symbols should render rectangle with quadrant symbols 1`] = `
"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▗▄▄▖\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▐\x1B[38;2;0;0;0m  \x1B[38;2;255;255;255m▌\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▝▀▀▘\x1B[0m"
`;

exports[`Quadrant symbols should render filled rectangle with quadrant symbols 1`] = `
"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▗▄▄▖\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▐██▌\x1B[0m
\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▝▀▀▘\x1B[0m"
`;

exports[`Quadrant symbols should render circle with quadrant symbols 1`] = `
"\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m      \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[38;2;255;255;255m▗▚\x1B[38;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m \x1B[38;2;255;255;255m▗▘\x1B[38;2;0;0;0m \x1B[38;2;255;255;255m▚\x1B[38;2;0;0;0m \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m \x1B[38;2;255;255;255m▚\x1B[38;2;0;0;0m  \x1B[38;2;255;255;255m▗▘\x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[38;2;255;255;255m▚▗▘\x1B[38;2;0;0;0m \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m   \x1B[38;2;255;255;255m▘\x1B[38;2;0;0;0m  \x1B[0m"
`;

exports[`Quadrant symbols should render full circle with quadrant symbols 1`] = `
"\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m          \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m          \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m     \x1B[38;2;255;85;85m▖\x1B[38;2;0;0;0m    \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m   \x1B[38;2;255;85;85m▗██▙\x1B[38;2;0;0;0m   \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m   \x1B[38;2;255;85;85m████▌\x1B[38;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[38;2;255;85;85m▝████▛\x1B[38;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m   \x1B[38;2;255;85;85m▜███▘\x1B[38;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m    \x1B[38;2;255;85;85m▀▛▘\x1B[38;2;0;0;0m   \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m          \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m          \x1B[0m"
`;

exports[`Quadrant symbols should render diagonal line with quadrant symbols 1`] = `
"\x1B[38;2;255;255;255m\x1B[48;2;0;0;0m▚\x1B[38;2;0;0;0m   \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m \x1B[38;2;255;255;255m▚\x1B[38;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[38;2;255;255;255m▚\x1B[38;2;0;0;0m \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m   \x1B[38;2;255;255;255m▚\x1B[0m"
`;

exports[`Quadrant symbols should handle empty buffer 1`] = `
"\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[0m
\x1B[38;2;0;0;0m\x1B[48;2;0;0;0m  \x1B[0m"
`;
